[project]
name = "s3-mini"
version = "0.1.0"
description = "Samsung S3-Mini Emulator."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "huterguier", email = "huterguier@gmail.com" }
]
dependencies = [
  "pynput",
  "pygame",
  "tqdm",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
[project.urls]
Homepage = "https://github.com/huterguier/s3-mini"
